<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".HallActivity">

    <item
        android:id="@+id/friends"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/friends"
        app:showAsAction="always" />
    <item
        android:id="@+id/ponts"
        android:icon="@android:drawable/star_big_on"
        android:title="@string/ponts"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/about" android:icon="@android:drawable/ic_dialog_info" app:showAsAction="never" android:title="@string/about">
    </item>
    <item
        android:id="@+id/exit"  app:showAsAction="never" android:title="@string/exit">
    </item>
</menu>